# comp0035_coursework2

./: README.md
cw clone/comp0035-cw-152ChenyuYang/: README.md  pyproject.toml  requirements.txt
cw clone/comp0035-cw-152ChenyuYang/coursework1/: affordable.py  database.py  waiting list.py
cw clone/comp0035-cw-152ChenyuYang/coursework1/data/: dclg-affordable-housing-borough.csv  dclg-affordable-housing-borough.xlsx  households-on-local-authority-waiting-list.xlsx
cw clone/comp0035-cw-152ChenyuYang/coursework1/database/: local_authority_housing.db
cw clone/comp0035-cw-152ChenyuYang/coursework1/output/: cleaned_data_second_sheet_updated_years.xlsx  cleaned_final_result_waiting_list.xlsx
cw clone/comp0035-cw-152ChenyuYang/coursework2/section3/: queries_aggregate.py  queries_delete.py  queries_insert.py  queries_join.py  queries_select.py  queries_update.py
cw clone/comp0035-cw-152ChenyuYang/coursework2/test/: test_aggregate.py  test_delete.py  test_insert.py  test_join.py  test_select.py  test_update.py
